--- a/Exercise1/Exercise1.vcxproj
+++ b/Exercise1/Exercise1.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{DAE425C5-A75D-47A7-B349-C9F3D839A80C}</ProjectGuid>
+    <ProjectGuid>{03C18422-B665-4A07-899E-5CC0AEE7C78F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>CppConsoleApplication1</RootNamespace>
+    <RootNamespace>Exercise1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
-    <ProjectName>Exercise3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -155,7 +154,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Exercise3.cpp" />
+    <ClCompile Include="Exercise1.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
